--- a/doc/layout/page.css
+++ b/doc/layout/page.css
@@ -1,7 +1,10 @@
-/* The standard CSS for doxygen 1.8.8 */
+@import url(http://fonts.googleapis.com/css?family=Open+Sans);
 
-body, table, div, p, dl {
-	font: 400 14px/22px Roboto,sans-serif;
+html,
+body {
+  font-family: "Open Sans", Roboto, sans-serif;
+  font-weight: 400;
+  font-size: 16px;
 }
 
 /* @group Heading Levels */
@@ -1438,3 +1441,15 @@ tr.heading h2 {
   }
 }
 
+body > div#top,
+body > div.header,
+body > div.contents,
+body > address.footer
+{
+  max-width: 60rem;
+  margin: 0rem auto;
+}
+
+#MSearchBox {
+  right: auto;
+}
